force-app/main/default/objects/Timeline_User_Preference__c/Timeline_User_Preference__c.object-meta.xml
<CustomObject>
    <description>An object used to store User Preferences related to the Timeline component, for example, active filter settings.</description>
    <label>Timeline User Preference</label>
    <nameField>
        <displayFormat>UPN-{00000}</displayFormat>
        <label>User Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>