force-app/main/default/objects/Timeline_User_Preference__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>A unique identifiable element for the user preference of the given type.
For example: a filter (= type) for the timeline-component on Account (= key) record pages.</description>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>