force-app/main/default/objects/Timeline_User_Preference__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of User Preference stored.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>