force-app/main/default/objects/Timeline_User_Preference__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Serialized JSON-string of the preference-value for user preference identified by the Type and Key combination.</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>